name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-backend
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , obelisk-route
               , text
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: src/main.hs
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , obelisk-route
               , text
