name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , reflex-dom
               , text
               , containers
               , lens
               , categories
               , universe
               , either
               , obelisk-route
  exposed-modules:
    Common.Api
    Common.Route
