name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , containers
               , data-default
               , dependent-sum
               , font-awesome-type
               , ghcjs-dom
               , jsaddle
               , lens
               , mtl
               , obelisk-frontend
               , obelisk-route
               , reflex
               , reflex-dom
               , static
               , static
               , text
               , universe
  exposed-modules:
    Frontend
    Frontend.FontAwesome
  ghc-options: -Wall

executable frontend
  main-is: src/main.hs
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  ghcjs-options: -DGHCJS_BROWSER
  if os(darwin)
     ghc-options: -dynamic
