name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , containers
               , data-default
               , dependent-sum
               , file-embed
               , font-awesome-type
               , ghcjs-dom
               , lens
               , modern-uri
               , mtl
               , neat-interpolation
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-google-analytics
               , obelisk-route
               , reflex
               , reflex-dom
               , obelisk-generated-static
               , text
               , universe
               , tutorial-frontend
               , mmark
               , template-haskell
               , haskell-src-exts
               , haskell-src-meta
  if impl(ghcjs)
    build-depends: ghcjs-base
  exposed-modules:
    Frontend
    Frontend.CommonWidgets
    Frontend.FontAwesome
    Frontend.Footer
    Frontend.Head
    Frontend.Nav
    Frontend.Page.GetStarted
    Frontend.Page.Resources
    Frontend.Page.Home
    Frontend.Page.Tutorial
    Frontend.QQ
  ghc-options: -Wall

executable frontend
  main-is: src-bin/main.hs
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  ghcjs-options: -DGHCJS_BROWSER
  if os(darwin)
     ghc-options: -dynamic
